# scaffolds

./: README.md  create-cpp-base.sh  create-fullstack.sh  create-mobile.sh  create-python-base.sh
cpp-base/: .clang-format  .gitignore  CMakeLists.txt  README.md
cpp-base/scripts/: run.sh
cpp-base/src/: CMakeLists.txt
fullstack-py-react/: README.md  start.sh
fullstack-py-react/backend/: README.md  pyproject.toml
fullstack-py-react/frontend/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json
mobile-py-reactnative/: start.sh  stop.sh
mobile-py-reactnative/backend/: .gitignore  pyproject.toml
mobile-py-reactnative/frontend/: .prettierrc  eslint.config.js  package-lock.json  package.json
python-base/: README.md  pyproject.toml
